--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "CoupledDipole"
 uuid = "de1afb17-949d-4d58-b050-a5d598cb6fce"
 authors = ["Jon Schlipf <jon.schlipf@b-tu.de>"]
 version = "0.1.0"
+
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
